<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Spoofer"
    android:background="#000000">

    <Button
        android:id="@+id/OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:text="@string/ok"
        android:onClick="checkInput" />

    <Spinner
        android:id="@+id/iface_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp" />

    <TextView
        android:id="@+id/iface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/iface"
        android:textColor="#dddddd" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_mac"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint" />

    <TextView
        android:id="@+id/current_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_mac"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/Random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random"
        android:layout_below="@+id/editText1"
        android:layout_alignRight="@+id/editText1" />

    <TextView
        android:id="@+id/new_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/iface_selector"
        android:text="@string/mac"
        android:textColor="#dddddd" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/separator"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentRight="true"
        android:background="#101010" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:layout_below="@+id/separator"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentRight="true"
        android:background="#101010" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persistent"
        android:id="@+id/checkBox2"
        android:checked="false"
        android:textColor="#ffffff"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentLeft="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locked"
        android:id="@+id/checkBox"
        android:checked="false"
        android:onClick="onClickCheck"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore"
        android:id="@+id/button"
        android:onClick="resetDefaults"
        android:layout_below="@+id/checkBox2"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/advanced"
        android:id="@+id/textView"
        android:textColor="#dddddd"
        android:layout_below="@+id/space"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="8dip"
        android:layout_below="@+id/Random" />

    <View
        android:id="@+id/separator"
        android:background="#aaaaaa"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/textView" />

    <View
        android:id="@+id/separator2"
        android:background="#aaaaaa"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/textView3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:background="#101010"
        android:layout_below="@+id/separator2"
        android:layout_above="@+id/current_mac" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/macspoofer"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/checkBox2"
        android:layout_alignParentBottom="true"
        android:alpha=".60" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:background="@drawable/alpha"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/imageView"
        android:text="@string/star_explanation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Experimental"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Advanded Locked Wi-Fi compatibility"
        android:id="@+id/checkBox3"
        android:layout_alignTop="@+id/imageView4"
        android:checked="false"
        android:layout_toLeftOf="@+id/imageView" />

</RelativeLayout>